#add by bingyu.song  for Reagame

project(Reagame)
cmake_minimum_required(VERSION 2.6)

if(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE "Debug")
endif()

SET(CMAKE_C_COMPILER gcc)
SET(CMAKE_CXX_COMPILER "g++")
SET(CMAKE_CXX_FLAGS " -g -Wall -Werror -std=c++0x    ")

SET(CMAKE_CXX_FLAGS_DEBUG "-O0")
SET(CMAKE_CXX_FLAGS_RELEASE "-O2")



ADD_DEFINITIONS(-DIOM_EPOLL  )
ADD_DEFINITIONS(-DMAX_PATH=128 )

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Bin)
SET(LIBRARY_OUTPUT_PATH    ${PROJECT_BINARY_DIR}/Lib)

ADD_SUBDIRECTORY( Framework )
ADD_SUBDIRECTORY( Gateway )
ADD_SUBDIRECTORY( Server )
ADD_SUBDIRECTORY( Logfront )



